<resources>
    <string name="app_name">计算机专业考研帮</string>
    <string name="textView_title">计算机专业考研帮</string>
    <string name="textView_timeTitle">时间规划</string>
    <string name="textView_reviewTitle">复习规划</string>
    <string name="textView_explain">\t\t\t这款APP专为想要报考计算机专业的同学制作，帮助大家从以下四个方面进行备考，希望对正在使用的您有帮助。</string>
    <string name="textView_timePlan">\t\t\t进行时间安排时，要结合自身习惯，不要盲目跟从身边或网上的经验帖。对自己每一个阶段都要有清晰的安排，让备考不成为负担。</string>
    <string name="button_choose_disipline">专业挑选</string>
    <string name="button_timePlanning">时间规划</string>
    <string name="button_book_recommend">书籍推荐</string>
    <string name="button_choose_target">确定目标</string>
    <string name="button_life_tips">生活贴士</string>
    <string name="button_encouragement">备考技巧</string>
    <string name="textview_feature_expectation">请选择未来的期望</string>
    <string name="button_howToChoose">没想好</string>
    <string name="RadioButton_research">科研</string>
    <string name="RadioButton_employment">就业</string>
    <string name="text_researchInterests">研究方向</string>
    <string name="text_workInterests">就业方向</string>
    <string name="text_employInterests">选择方向</string>
    <string name="text_choose_displine">专业选择</string>
    <string name="text_displineCharacters">专业特点</string>
    <string name="button_findSchool">查看该专业对应院校</string>
    <string name="textview_findSchool_title">专业还未确定？</string>
    <string name="textview_findSchool_chooseTarget">去选专业</string>
    <string name="textview_findSchool_schoolRank">所选专业对应学校排行</string>
    <string name="textview_findSchool_grade">往年录取平均分数</string>
    <string name="textview_findSchool_publicPraise">在校生评价:</string>
    <string name="textView_habitChoose">个人习惯选择</string>
    <string name="textView_habitOne">效率型</string>
    <string name="textView_habitTwo">懒散型</string>
    <string name="textView_habitThree">学霸型</string>
    <string name="textView_sport">平时运动情况</string>
    <string name="textView_sportOne">每天动</string>
    <string name="textView_sportTwo">每周动</string>
    <string name="textView_sportThree">并不动</string>
    <string name="button_createSport">生成复习规划</string>
    <string name="textView_reviewTime7">\t7:00</string>
    <string name="textView_reviewTime8">\t8:00</string>
    <string name="textView_reviewTime9">\t9:00</string>
    <string name="textView_reviewTime10">\t10:00</string>
    <string name="textView_reviewTime12">\t12:00</string>
    <string name="textView_reviewTime13">\t13:00</string>
    <string name="textView_reviewTime14">\t14:00</string>
    <string name="textView_reviewTime15">\t15:00</string>
    <string name="textView_reviewTime16">\t16:00</string>
    <string name="textView_reviewTime17">\t17:00</string>
    <string name="textView_reviewTime18">\t18:00</string>
    <string name="textView_reviewTime19">\t19:00</string>
    <string name="textView_reviewTime20">\t20:00</string>
    <string name="textView_reviewTime21">\t21:00</string>
    <string name="textView_reviewTime22">\t22:00</string>
    <string name="textView_reviewTime23">\t23:00</string>
    <string name="textView_reviewTime24">\t24:00</string>
    <string name="textView_reviewTime6">\t6:00</string>
    <string name="textView_plan01work01">起床吃饭+高效背诵</string>
    <string name="textView_plan01work02">复习最烂的学科</string>
    <string name="textView_plan01work03">午饭+回顾知识点</string>
    <string name="textView_plan01work04">高效学习</string>
    <string name="textView_plan01work05">室外锻炼+擅长科目</string>
    <string name="textView_plan01work06">回顾一天内容</string>
    <string name="textView_plan01work07">复习最不擅长科目</string>
    <string name="textView_plan02work01">起床吃饭</string>
    <string name="textView_plan02work02">复习自己最烂的学科</string>
    <string name="textView_plan02work03">复习最不擅长科目</string>
    <string name="textView_plan02work04">阅读休息</string>
    <string name="textView_plan02work05">室外锻炼</string>
    <string name="textView_plan02work06">复习最擅长科目</string>
    <string name="textView_plan02work07">回顾一天内容</string>
    <string name="textView_plan03work01">吃饭+不擅长科目</string>
    <string name="textView_plan03work02">复习最擅长科目</string>
    <string name="textView_plan03work03">回顾知识点</string>
    <string name="textView_plan03work04">自由安排复习</string>
    <string name="textView_plan03work05">练习听力</string>
    <string name="textView_plan03work06">回顾知识点</string>
    <string name="textView_plan03work07">强化记忆</string>
    <string name="textView_plan04work01">吃饭+复习擅长科目</string>
    <string name="textView_plan04work02">复习最不擅长科目</string>
    <string name="textView_plan04work03">阅读休息</string>
    <string name="textView_plan04work04">复习最擅长科目</string>
    <string name="textView_plan04work05">室外锻炼</string>
    <string name="textView_plan04work06">练习听力</string>
    <string name="textView_plan04work07">复习最不擅长科目</string>
    <string name="textView_plan05work01">起床吃饭</string>
    <string name="textView_plan05work02">练习听力</string>
    <string name="textView_plan05work03">阅读休息</string>
    <string name="textView_plan05work04">复习最不擅长科目</string>
    <string name="textView_plan05work05">复习最擅长科目</string>
    <string name="textView_plan05work06">室外锻炼</string>
    <string name="textView_plan05work07">回顾知识点</string>
    <string name="textView_plan06work01">起床吃饭</string>
    <string name="textView_plan06work02">练习听力</string>
    <string name="textView_plan06work03">背诵复习最擅长科目</string>
    <string name="textView_plan06work04">阅读休息</string>
    <string name="textView_plan06work05">复习最不擅长科目</string>
    <string name="textView_plan06work06">室外锻炼</string>
    <string name="textView_plan06work07">回顾知识点</string>
    <string name="textView_plan07work01">起床吃饭+运动+背诵</string>
    <string name="textView_plan07work02">复习最擅长科目</string>
    <string name="textView_plan07work03">复习最不擅长科目</string>
    <string name="textView_plan07work04">午休+练习听力</string>
    <string name="textView_plan07work05">阅读休息</string>
    <string name="textView_plan07work06">室外锻炼+吃饭</string>
    <string name="textView_plan07work07">强化记忆</string>
    <string name="textView_plan08work01">起床吃饭</string>
    <string name="textView_plan08work02">复习最擅长科目</string>
    <string name="textView_plan08work03">自由安排复习</string>
    <string name="textView_plan08work04">复习最不擅长科目</string>
    <string name="textView_plan08work05">阅读休息</string>
    <string name="textView_plan08work06">强化记忆</string>
    <string name="textView_plan08work07">练习听力</string>
    <string name="textView_plan09work01">起床吃饭+练习听力</string>
    <string name="textView_plan09work02">复习最不擅长科目</string>
    <string name="textView_plan09work03">复习最擅长科目</string>
    <string name="textView_plan09work04">室外锻炼</string>
    <string name="textView_plan09work05">阅读休息</string>
    <string name="textView_plan09work06">练习听力</string>
    <string name="textView_plan09work07">强化记忆</string>
    <string name="textView_lifeTips_title01">推荐饮食搭配</string>
    <string name="textView_lifeTips_title02">梦想加油站</string>
    <string name="title_activity_book_commend">BookCommend</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="bookCommend_one">考研基础</string>
    <string name="bookCommend_two">专业基础</string>
    <string name="bookCommend_three">鸡汤美学</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_book_comend">BookComend</string>

</resources>
