<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parentUse"
    tools:context=".MainActivity">

    <RelativeLayout
        style="@style/parentUse"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cn.studyjams.s1.sj19.majie.MainActivity">

        <TextView
            android:id="@+id/title_textview"
            style="@style/titleUse"
            android:layout_marginBottom="16dp"
            android:text="@string/textView_title" />

        <ImageButton
            android:id="@+id/encourageMusic"
            style="@style/usuallyUse"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:background="@drawable/music"/>

        <TextView
            android:id="@+id/explain_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_textview"
            android:fontFamily="sans-serif-medium"
            android:text="@string/textView_explain"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/explain_textview"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/chooseDiscipline_button"
                    style="@style/buttonUse"
                    android:layout_margin="28dp"
                    android:onClick="chooseDiscipline"
                    android:text="@string/button_choose_disipline" />

                <Button
                    android:id="@+id/timePlanning_button"
                    style="@style/buttonUse"
                    android:onClick="timePlanning"
                    android:text="@string/button_timePlanning" />

                <Button
                    android:id="@+id/bookRecommend_button"
                    style="@style/buttonUse"
                    android:layout_marginTop="28dp"
                    android:onClick="bookRecommend"
                    android:text="@string/button_book_recommend" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="28dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/chooseTarget_button"
                    style="@style/buttonUse"
                    android:layout_margin="28dp"
                    android:onClick="chooseTarget"
                    android:text="@string/button_choose_target" />

                <Button
                    android:id="@+id/lifeTips_buton"
                    style="@style/buttonUse"
                    android:onClick="lifeTips"
                    android:text="@string/button_life_tips" />

                <Button
                    android:id="@+id/encouragement_button"
                    style="@style/buttonUse"
                    android:layout_marginTop="28dp"
                    android:onClick="encouragement"
                    android:text="@string/button_encouragement" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>